Bug 70974, 72766 	Remove extra horizonal scroll bar in the tree panel and if the text content of tree item is too long, we will cut it off and when mouse over the tree item, we will popup a tooltip to display the full content.
https://reviewboard.eng.vmware.com/r/346751/

http://bugzilla.zimbra.com/show_bug.cgi?id=70974
http://bugzilla.zimbra.com/show_bug.cgi?id=72766

--- a/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
+++ b/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
@@ -772,7 +772,7 @@ TD.gridGroupBodyLabel {
 .AdminTreeItem-selected, 
 .AdminTreeItem-selected-focused, 
 .AdminTreeItem-actioned {
-	padding-left:18px;
+	padding-left:5px;
 }
 
 .AdminTreeItem-selected, 
